- RestoreCollectionOrderExtension - Updated Collection component to play well with RestoreCollectionOrderExtension - attributes Twig function automatically encodes component array options to json - Overriden form layout attributes block to call attributes function - Calling class_name Twig function from form layouts

--- a/Resources/views/formLayout.html.twig
+++ b/Resources/views/formLayout.html.twig
@@ -60,7 +60,7 @@
 
 {% block location_widget %}
     {% set attr = {
-        class: "#{attr.class ?? ''} location",
+        class: "#{class_name(attr.class ?? '')} location",
         'data-component-location': '{}',
     } + attr %}
 
