--- a/Resources/views/collectionWidgetLayout.html.twig
+++ b/Resources/views/collectionWidgetLayout.html.twig
@@ -1,9 +1,10 @@
 {% block collection_widget %}
     {% from _self import collection_entry %}
-    {% set attr = {
-        class: "#{attr.class ?? ''} collection",
-        'data-component-collection': "{}",
-    } + attr %}
+    {% set attr = {class: "#{class_name(attr.class ?? '')} collection"} + attr + {'data-component-collection': []} %}
+
+    {% if restoreOrder|default(false) %}
+        {% set attr = {'data-component-collection': attr['data-component-collection'] + {position_field_selector: false}} + attr %}
+    {% endif %}
 
     <div {{ block('widget_container_attributes') }}>
         {% if prototype.vars.compound %}
