Support for RestoreCollectionOrderExtension together with Collection widget

--- a/Resources/views/collectionWidgetLayout.html.twig
+++ b/Resources/views/collectionWidgetLayout.html.twig
@@ -2,6 +2,10 @@
     {% from _self import collection_entry %}
     {% set attr = {class: "#{class_name(attr.class ?? '')} collection"} + attr + {'data-component-collection': []} %}
 
+    {% if restore_order|default(false) %}
+        {% set attr = {'data-component-collection': attr['data-component-collection'] + {position_field_selector: true}} + attr %}
+    {% endif %}
+
     <div {{ block('widget_container_attributes') }}>
         {% if prototype.vars.compound %}
             <div class="collection__header">
