--- a/Resources/views/collectionWidgetLayout.html.twig
+++ b/Resources/views/collectionWidgetLayout.html.twig
@@ -3,7 +3,7 @@
     {% set attr = {class: "#{class_name(attr.class ?? '')} collection"} + attr + {'data-component-collection': []} %}
 
     {% if restore_order|default(false) %}
-        {% set attr = {'data-component-collection': attr['data-component-collection'] + {maintain_indices: true}} + attr %}
+        {% set attr = {'data-component-collection': attr['data-component-collection'] + {preserve_names: true}} + attr %}
     {% endif %}
 
     <div {{ block('widget_container_attributes') }}>
@@ -46,4 +46,6 @@
     {% else %}
         {{ form_row(form) }}
     {% endif %}
+
+    <div class="collection-actions"><a href="#" class="collection-move"></a></div>
 {% endmacro %}
