--- a/Resources/views/paginator.html.twig
+++ b/Resources/views/paginator.html.twig
@@ -17,7 +17,7 @@
 
             <div class="paginator-pages">
                 <ul class="pagination">
-                    {{ menu.item(null, {page: page.pageNumber - 1} + parameters, {class: {active: false, disabled: page.pageNumber == 1}}, {href: page.pageNumber == 1 ? false : null, label: '«'}) }}
+                    {{ menu.item(null, {page: page.pageNumber - 1} + parameters, {class: {'pagination-previous': true, active: false, disabled: page.pageNumber == 1}}, {href: page.pageNumber == 1 ? false : null, label: '«'}) }}
                     {{ menu.item(null, {page: 1} + parameters, {class: {active: page.pageNumber == 1}}, {label: 1}) }}
 
                     {% if page.pageNumber - neighboursCount > 2 %}<li class="disabled"><a>…</a></li>{% endif %}
@@ -34,7 +34,7 @@
                         {{ menu.item(null, {page: maximalPage} + parameters, {class: {active: page.pageNumber == maximalPage}}, {label: maximalPage}) }}
                     {% endif %}
 
-                    {{ menu.item(null, {page: page.pageNumber + 1} + parameters, {class: {active: false, disabled: page.pageNumber >= maximalPage}}, {href: page.pageNumber >= maximalPage ? false : null, label: '»'}) }}
+                    {{ menu.item(null, {page: page.pageNumber + 1} + parameters, {class: {'pagination-next': true, active: false, disabled: page.pageNumber >= maximalPage}}, {href: page.pageNumber >= maximalPage ? false : null, label: '»'}) }}
                 </ul>
             </div>
         {% endif %}
