Refactored twig for pagination, adding possiblity of different number of records on first page.

--- a/Resources/views/siblingPaginator.html.twig
+++ b/Resources/views/siblingPaginator.html.twig
@@ -4,10 +4,10 @@
     {% set page = filter.page %}
 {% endif %}
 
-{% if page is defined and records|length > page.recordsPerPage %}
+{% if page is defined and records|length > page.recordsOnFirstPage %}
     <div class="sibling-paginator">
         <p class="paginator-info">
-            {{ 'siblingPaginator.info'|trans({'%recordCount%': min(page.recordsPerPage, records|length), '%recordTotalCount%': records|length}, 'paginator')|raw }}
+            {{ 'siblingPaginator.info'|trans({'%recordCount%': min(page.toPage == 1 ? page.recordsOnFirstPage : page.recordsPerPage, records|length), '%recordTotalCount%': records|length}, 'paginator')|raw }}
         </p>
 
         {% set parameters = app.request.attributes.get('_route_params') + app.request.query.all %}
